feat: added main functions on input fields and listeners on the navigation buttons

--- a/views/Personal/personal.html
+++ b/views/Personal/personal.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <main class="main-container">
+
       <div class="container-left">
         <h1 class="title">Hey, Rocketeer, what are your coordinates?</h1>
 
@@ -19,30 +20,51 @@
             id="firstName"
             placeholder="First Name"
           />
+          <div class="error">
+              <p class="error-name" id="errorName"></p>
+
+          </div>
+
+
           <input
             type="text"
             name="last-name"
             id="lastName"
             placeholder="Last Name"
-          />
+            />
+            <div class="error">
+                <p class="error-surname" id="errorSurname"></p>
+            </div>
+            
+
           <input type="email" name="email" id="email" placeholder="E Mail" />
+
+          <div class="error">
+              <p class="error-email" id="errorEmail"></p>
+          </div>
+
           <input
             type="number"
             name="phone-number"
             id="phoneNumber"
             placeholder="+995 5_ _ _ _"
           />
+          <div class="error">
+            <p class="error-number" id="errorNumber"></p>
         </div>
+        </div>
+        
         <nav class="navigation">
-          <span>
-            <img src="/assets/previous.png" alt="" />
+          <span><a href="#">
+              <img src="/assets/previous.png" alt="" />
+          </a>
           </span>
+
           <div class="page-nav-circles">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
+            <a href="#"><span></span></a>
+            <a href="#"><span></span></a>
+            <a href="#"><span></span></a>
+            <a href="#"><span></span></a>
           </div>
           <span>
             <img src="/assets/next.png" alt="" />
