--- a/views/Personal/personal.css
+++ b/views/Personal/personal.css
@@ -54,14 +54,14 @@ body {
 .input-container input {
   height: 54px;
   width: 455px;
-  margin-bottom: 35px;
+  /* margin-top: 35px; */
+  padding-left: 55px;
+  font-style: italic;
+  font-family: "Montserrat", sans-serif;
 }
 
-::placeholder {
-  padding-left: 55px;
-  font-family: "Montserrat", sans-serif;
-  font-style: italic;
-}
+/* ::placeholder {
+} */
 
 .navigation,
 .page-nav-circles {
@@ -72,7 +72,7 @@ body {
   margin-left: 15px;
 }
 
-.page-nav-circles span {
+.page-nav-circles a {
   height: 19px;
   width: 19px;
   border: 1px solid hsla(8, 99%, 56%, 1);
@@ -105,4 +105,39 @@ body {
   width: 90%;
   margin-top: 160px;
   color: hsla(0, 0%, 100%, 1);
+}
+
+.error-name,
+.error-surname,
+.error-email,
+.error-number{
+  color: red;
+  font-size: 11px;
+  font-weight: 400;
+  line-height: 13.41px;
+  font-style: italic;
+  font-family: "Montserrat", sans-serif;
+}
+
+.error{
+  height: 20px;
+  width: fit-content;
+  margin-bottom: 15px;
+}
+.error-name{
+  margin-left: -165px;
+}
+
+.error-surname{
+  margin-left: -45px;
+
+}
+
+
+.error-email{
+  margin-left: -180px;
+}
+
+.error-number{
+  margin-left: -180px;
 }
