--- a/views/Personal/personal.html
+++ b/views/Personal/personal.html
@@ -53,7 +53,7 @@
             <p class="error-number" id="errorNumber"></p>
         </div>
         </div>
-        
+
         <nav class="navigation">
           <span><a href="#">
               <img src="/assets/previous.png" alt="" />
@@ -61,8 +61,8 @@
           </span>
 
           <div class="page-nav-circles">
-            <a href="#"><span></span></a>
-            <a href="#"><span></span></a>
+            <a class="active" href="#" ><span></span></a>
+            <a href="#"><span ></span></a>
             <a href="#"><span></span></a>
             <a href="#"><span></span></a>
           </div>
