--- a/views/Insights/insights.css
+++ b/views/Insights/insights.css
@@ -1,104 +1,94 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Rowdies&display=swap");
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-
-  body {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    max-width: 100%;
-
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.main-container{
-    width: 100%;
-    display: grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1fr;
+body {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  max-width: 100%;
+}
+
+.main-container {
+  width: 100%;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr;
 }
 
 .container-left {
-    background-color: #ffffff;
-  }
-  
+  background-color: #ffffff;
+}
+
 .container-right {
-    background: radial-gradient(50% 50% at 50% 50%, #0c0d0e 0%, #151718 73.44%);
-    justify-content: center;
-  }
+  background: radial-gradient(50% 50% at 50% 50%, #0c0d0e 0%, #151718 73.44%);
+  justify-content: center;
+}
 
 .title {
-    width: 80%;
-    color: hsla(8, 99%, 56%, 1);
-    font-family: "Rowdies", cursive;
-    font-size: 64px;
-    font-weight: 400;
-    margin-top: 130px;
-    margin-left: 100px;
-    text-align: center;
-  }
-
+  width: 80%;
+  color: hsla(8, 99%, 56%, 1);
+  font-family: "Rowdies", cursive;
+  font-size: 64px;
+  font-weight: 400;
+  margin-top: 130px;
+  margin-left: 100px;
+  text-align: center;
+}
 
 .container-right h2 {
-    color: hsla(8, 99%, 56%, 1);
-    font-family: "Rowdies", cursive;
-    font-size: 64px;
-    font-weight: 400;
-    text-align: center;
-    padding-top: 130px;
-  }
-  
-  .container-right p {
-    font-family: Montserrat;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 48px;
-    padding-left: 190px;
-    width: 90%;
-    margin-top: 160px;
-    color: hsla(0, 0%, 100%, 1);
-  }
+  color: hsla(8, 99%, 56%, 1);
+  font-family: "Rowdies", cursive;
+  font-size: 64px;
+  font-weight: 400;
+  text-align: center;
+  padding-top: 130px;
+}
 
-  .survay-section{
-    display: flex;
-    flex-direction: column;
-    padding-top: 127px;
-    padding-left: 220px;
-  }
+.container-right p {
+  font-family: Montserrat;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 48px;
+  padding-left: 190px;
+  width: 90%;
+  margin-top: 160px;
+  color: hsla(0, 0%, 100%, 1);
+}
 
-  
-
-  .text-area-one{
-    padding-top: 45px;
-
-
-  }
+.survay-section {
+  display: flex;
+  flex-direction: column;
+  padding-top: 127px;
+  padding-left: 220px;
+}
 
 .radio-form,
 .text-area-one,
-.text-area-two{
-    font-family: Montserrat;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 22px;
-    letter-spacing: 0em;
-    text-align: left;
+.text-area-two {
+  font-family: Montserrat;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
 }
 
-.radio-form input{
-    margin-top: 21px;
+.radio-form input {
+  margin-top: 21px;
 }
 
 #comentSectionOne,
-#comentSectionTwo{
-    margin-top: 20px;
+#comentSectionTwo {
+  margin-top: 20px;
 }
 
 .text-area-one,
-.text-area-two{
-    margin-top: 40px;
+.text-area-two {
+  margin-top: 50px;
 }
 
 .navigation,
@@ -117,14 +107,16 @@
   margin-left: 15px;
   margin-top: 1px;
   background: rgb(247, 221, 217);
-
 }
-  .navigation {
-    margin-top: 175px;
-    justify-content: center;
-    background-color: #ffffff;
-  }
+.navigation {
+  /* position: absolute; */
+  /* position: fixed; */
+  margin-top: 175px;
+  justify-content: center;
+  background-color: #ffffff;
+}
 
-  .page-nav-circles .active{
-    background-color: hsla(8, 99%, 56%, 1);
-  }
+
+.page-nav-circles .active {
+  background-color: hsla(8, 99%, 56%, 1);
+}
