--- a/views/Insights/insights.html
+++ b/views/Insights/insights.html
@@ -13,12 +13,14 @@
         <h1 class="title">What about you?</h1>
 
         <div class="survay-section">
-          <div class="radio-form">
+            <form id="formId" onsubmit="validateForm(event)">
+          <div class="radio-form" >
             <p>Would you attend Devtalks and maybe also organize your own?</p>
-            <input type="radio" name="radio" id="yesRadioButton" />
+            <input type="radio" name="will_organize_devtalk" id="yesRadioButton" value="yes" />
             <label for="yes">Yes</label><br />
-            <input type="radio" name="radio" id="noRadioButton" />
+            <input type="radio" name="will_organize_devtalk" id="noRadioButton" value="no" />
             <label for="no">No</label><br />
+            <p class="error" id="error-msg"></p>
           </div>
 
           <div class="container" id="container" style="display: none;">
@@ -31,28 +33,28 @@
                 <textarea name="text-area-one" id="comentSectionTwo" cols="65" rows="8">I...</textarea>
               </div>
           </div>
-
+          <nav class="navigation">
+              <span><a href="#">
+                  <img src="/assets/previous.png" alt="" />
+              </a>
+              </span>
+    
+              <div class="page-nav-circles">
+                <a class="active" href="#" ><span></span></a>
+                <a class="active" href="#"><span ></span></a>
+                <a class="active" href="#"><span></span></a>
+                <a class="active" href="#"><span></span></a>
+                <a href="#"><span></span></a>
+  
+              </div >
+              <button class="next-btn">
+                <img src="/assets/next.png" alt="" />
+              </button>
+            </nav>
+        </form>
 
 
         </div>
-        <nav class="navigation">
-            <span><a href="#">
-                <img src="/assets/previous.png" alt="" />
-            </a>
-            </span>
-  
-            <div class="page-nav-circles">
-              <a class="active" href="#" ><span></span></a>
-              <a class="active" href="#"><span ></span></a>
-              <a class="active" href="#"><span></span></a>
-              <a class="active" href="#"><span></span></a>
-              <a href="#"><span></span></a>
-
-            </div>
-            <span>
-              <img src="/assets/next.png" alt="" />
-            </span>
-          </nav>
       </div>
       <div class="container-right">
         <h2>Redberrian Insights</h2>
