--- a/views/Skills/skills.html
+++ b/views/Skills/skills.html
@@ -19,7 +19,7 @@
                 <p class ="errors"id="skillError"></p>
                 <input placeholder ="Experience Duration in Years" type="number" name="" id="numberInput">
                 <p class ="errors" id="inputError"></p>
-                <button onclick="addSkill();" class="submitButton">Programming Language</button>
+                <button onclick="addSkill()" class="submitButton">Programming Language</button>
                 <div class="userSkills">
                 </div>
             </div>
