--- a/views/Insights/insights.html
+++ b/views/Insights/insights.html
@@ -22,14 +22,14 @@
                 id="yesRadioButton"
                 value="yes"
               />
-              <label for="yes">Yes</label><br />
+              <label for="yesRadioButton">Yes</label><br />
               <input
                 type="radio"
                 name="will_organize_devtalk"
                 id="noRadioButton"
                 value="no"
               />
-              <label for="no">No</label><br />
+              <label for="noRadioButton">No</label><br />
               <p class="error" id="error-msg"></p>
             </div>
 
