style: add final css

--- a/views/Skills/skills.html
+++ b/views/Skills/skills.html
@@ -24,13 +24,13 @@
                 </div>
             </div>
             <div class="dots">
-                <img src="/assets/previous.png" alt="">
+                <img src="../../assets/previous.png" alt="">
                 <div class="dotColored"></div>
                 <div class="dotColored"></div>
                 <div class="dot"></div>
                 <div class="dot"></div>
                 <div class="dot"></div>
-                <img src="/assets/next.png" alt="">
+                <img src="../../assets/next.png" alt="">
             </div>
         </div>
         <div class="secondDiv">
