--- a/views/Submit/submit.html
+++ b/views/Submit/submit.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="submit.css">
 </head>
 <body>
-   
-        <button><a>Submit</a></button>
+   <div class="main">
+        <button class="submitButton"><a>Submit</a></button>
         <a href="../Insights/insights.html"class="goBack">go back</a>
-
+   </div>
+  <h1 class="thanks hidde">Thanks for Joining 😊</h1>
+   <script src="./submit.js"></script>
 </body>
 </html>
