--- a/views/Personal/personal.html
+++ b/views/Personal/personal.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     <main class="main-container">
-
       <div class="container-left">
         <h1 class="title">Hey, Rocketeer, what are your coordinates?</h1>
 
@@ -21,26 +20,22 @@
             placeholder="First Name"
           />
           <div class="error">
-              <p class="error-name" id="errorName"></p>
-
+            <p class="error-name" id="errorName"></p>
           </div>
-
-
           <input
             type="text"
             name="last-name"
             id="lastName"
             placeholder="Last Name"
-            />
-            <div class="error">
-                <p class="error-surname" id="errorSurname"></p>
-            </div>
-            
+          />
+          <div class="error">
+            <p class="error-surname" id="errorSurname"></p>
+          </div>
 
           <input type="email" name="email" id="email" placeholder="E Mail" />
 
           <div class="error">
-              <p class="error-email" id="errorEmail"></p>
+            <p class="error-email" id="errorEmail"></p>
           </div>
 
           <input
@@ -51,18 +46,19 @@
           />
           <div class="error">
             <p class="error-number" id="errorNumber"></p>
-        </div>
+          </div>
         </div>
 
         <nav class="navigation">
-          <span><a href="#">
+          <span
+            ><a href="#">
               <img src="/assets/previous.png" alt="" />
-          </a>
+            </a>
           </span>
 
           <div class="page-nav-circles">
-            <a class="active" href="#" ><span></span></a>
-            <a href="#"><span ></span></a>
+            <a class="active" href="#"><span></span></a>
+            <a href="#"><span></span></a>
             <a href="#"><span></span></a>
             <a href="#"><span></span></a>
           </div>
@@ -84,5 +80,4 @@
     </main>
     <script src="./personal.js"></script>
   </body>
-
 </html>
