--- a/views/Submit/submit.css
+++ b/views/Submit/submit.css
@@ -1,47 +1,48 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
-  @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-
-*{
-    margin: 0;
+* {
+  margin: 0;
 }
-body{
-    background-color: black;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+body {
+  background-color: black;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-.main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-button{
-    background-color: rgba(254, 59, 31, 1);
-    color: white;
-    width: 395px;
-    height: 79px;
-    border-radius: 50px;
-    text-align: center;
+button {
+  background-color: rgba(254, 59, 31, 1);
+  color: white;
+  width: 395px;
+  height: 79px;
+  border-radius: 50px;
+  text-align: center;
+  border: none;
+  cursor: pointer;
 }
-button a{
-    font-size: 36px;
-    font-weight: 400;
-    font-family: 'Montserrat', sans-serif;
+button a {
+  font-size: 36px;
+  font-weight: 400;
+  font-family: "Montserrat", sans-serif;
 }
-.goBack{
-    margin-top: 25px;
-    color: white;
-    font-size: 28px;
-    text-decoration: underline;
-    font-family: 'Montserrat', sans-serif;
+.goBack {
+  margin-top: 25px;
+  color: white;
+  font-size: 28px;
+  text-decoration: underline;
+  font-family: "Montserrat", sans-serif;
 }
-.hidde{
-    display: none;
+.hidde {
+  display: none;
 }
-.thanks{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 96px;
-    color: rgba(254, 59, 31, 1);
-    text-align: center;
+.thanks {
+  font-family: "Montserrat", sans-serif;
+  font-size: 96px;
+  color: rgba(254, 59, 31, 1);
+  text-align: center;
 }
