"fix: fix skills errors, post request, stylings"

--- a/views/Insights/insights.css
+++ b/views/Insights/insights.css
@@ -150,3 +150,12 @@ form {
 #comentSectionTwo {
   resize: none;
 }
+
+.dots img {
+  cursor: pointer;
+}
+
+.container,
+.text-area-two {
+  margin-left: -3vw;
+}
