--- a/views/Insights/insights.html
+++ b/views/Insights/insights.html
@@ -41,23 +41,21 @@
                   id="comentSectionOne"
                   cols="65"
                   rows="8"
-                >
-I would...</textarea
-                >
+                  placeholder="I would..."
+                ></textarea>
                 <p class="text-area-one-error"></p>
               </div>
-              <div class="text-area-two">
-                <p>What would you speak about at Devtalk?</p>
-                <textarea
-                  name="text-area-two"
-                  id="comentSectionTwo"
-                  cols="65"
-                  rows="8"
-                >
-I...</textarea
-                >
-                <p class="text-area-two-error"></p>
-              </div>
+            </div>
+            <div class="text-area-two">
+              <p>Tell us something special</p>
+              <textarea
+                name="text-area-two"
+                id="comentSectionTwo"
+                cols="65"
+                rows="8"
+                placeholder="I..."
+              ></textarea>
+              <p class="text-area-two-error"></p>
             </div>
           </form>
         </div>
