--- a/views/Personal/personal.css
+++ b/views/Personal/personal.css
@@ -66,7 +66,9 @@ body {
 .page-nav-circles a {
   height: 19px;
   width: 19px;
-  border: 1px solid hsla(8, 99%, 56%, 1);
+  background-color: hsla(8, 99%, 56%, 1);
+  opacity: 0.1;
+
   border-radius: 50%;
   margin-left: 15px;
   margin-top: 1px;
@@ -118,6 +120,12 @@ body {
   margin-bottom: 10px;
 }
 
-.page-nav-circles .active {
+.page-nav-circles span {
   background-color: hsla(8, 99%, 56%, 1);
+  opacity: 0.1;
+  border: none;
+}
+.page-nav-circles a:nth-child(1) {
+  background-color: hsla(8, 99%, 56%, 1);
+  opacity: 100%;
 }
