"fix:fix navigation button"

--- a/views/Insights/insights.html
+++ b/views/Insights/insights.html
@@ -61,16 +61,16 @@
         </div>
         <nav class="navigation">
           <span
-            ><a href="#">
+            ><a href="../Covid/covid.html">
               <img src="/assets/previous.png" alt="" />
             </a>
           </span>
           <div class="page-nav-circles">
+            <a class="active" href="../Personal/personal.html"><span></span></a>
+            <a class="active" href="../Skills/skills.html"><span></span></a>
+            <a class="active" href="../Covid/covid.html"><span></span></a>
             <a class="active" href="#"><span></span></a>
-            <a class="active" href="#"><span></span></a>
-            <a class="active" href="#"><span></span></a>
-            <a class="active" href="#"><span></span></a>
-            <a href="#"><span></span></a>
+            <a href="#" id="submit-page"><span></span></a>
           </div>
           <button class="next-btn">
             <img src="/assets/next.png" alt="" />
