--- a/views/Personal/personal.html
+++ b/views/Personal/personal.html
@@ -51,19 +51,24 @@
 
         <nav class="navigation">
           <span
-            ><a href="#">
+            ><a href="../../index.html">
               <img src="/assets/previous.png" alt="" />
             </a>
           </span>
 
           <div class="page-nav-circles">
             <a class="active" href="#"><span></span></a>
-            <a href="#"><span></span></a>
+            <a href="#" id="skills-page"><span></span></a>
             <a href="#"><span></span></a>
             <a href="#"><span></span></a>
           </div>
           <span>
-            <img src="/assets/next.png" alt="" />
+            <img
+              src="/assets/next.png"
+              alt=""
+              style="cursor: pointer"
+              id="next"
+            />
           </span>
         </nav>
       </div>
