--- a/views/Skills/skills.html
+++ b/views/Skills/skills.html
@@ -33,9 +33,9 @@
           <a href="../Personal/personal.html">
             <img src="../../assets/previous.png" alt="" />
           </a>
+          <a href="../Personal/personal.html"><div class="dotColored"></div></a>
           <div class="dotColored"></div>
-          <div class="dotColored"></div>
-          <div class="dot"></div>
+          <div class="dot" id="covid-page" style="cursor: pointer"></div>
           <div class="dot"></div>
           <div class="dot"></div>
           <img src="../../assets/next.png" alt="" id="next" />
