--- a/views/Skills/skills.css
+++ b/views/Skills/skills.css
@@ -155,3 +155,8 @@ input[type="number"]::placeholder {
   width: 20px;
   height: 20px;
 }
+#skillError,
+#inputError {
+  font-size: 13px;
+  margin-left: 6px;
+}
