"feat: add info being saved in filled inputs"

--- a/views/Insights/insights.css
+++ b/views/Insights/insights.css
@@ -160,3 +160,11 @@ form {
 .text-area-two {
   margin-left: -3vw;
 }
+
+.text-area-two-error,
+.text-area-one-error {
+  color: hsla(8, 99%, 56%, 1);
+  font-size: 14px;
+  font-style: italic;
+  margin-left: 10px;
+}
