--- a/views/List/list.html
+++ b/views/List/list.html
@@ -22,8 +22,7 @@
                         </svg>
                 </span>
             </div>
-            <div class="application">
-<!-- section one -->
+            <!-- <div class="application">
                 <div class="section-one">
                     <div class="persoal-information">
                         <h2>Personal Information</h2>
@@ -51,7 +50,6 @@
     
                     </div>
                 </div>
-<!-- section two -->
                 <div class="section-two">
                     <div class="covid-situation">
                   <div class="preference">
@@ -160,7 +158,7 @@
               </div>
              </div>
             </div>
-            </div>
+            </div> -->
         </div>
 
        
