--- a/views/List/list.css
+++ b/views/List/list.css
@@ -11,9 +11,6 @@ body {
   height: 100vh;
   background-color: #0c0d0e;
   font-size: 18px;
-
-  /* font-family: 'Montserrat', sans-serif;
-font-family: 'Rowdies', cursive; */
 }
 
 .main-container {
@@ -44,6 +41,10 @@ p {
   padding: 12px;
 }
 
+.hello {
+  display: none;
+}
+
 .form {
   display: flex;
   align-items: center;
@@ -52,11 +53,19 @@ p {
 }
 
 .application {
-  /* display: none; */
+  display: none;
   width: 1154px;
   height: auto;
   background-color: #fff;
   padding: 100px;
+}
+
+.active {
+  display: block;
+}
+
+.btn-arrow {
+  cursor: pointer;
 }
 
 .section-one,
@@ -77,7 +86,7 @@ p {
 
 .insights {
   padding-left: 120px;
-gap: 100px;
+  gap: 100px;
 }
 
 .name,
@@ -88,8 +97,6 @@ gap: 100px;
 .skils {
   display: flex;
 }
-
-
 
 h2 {
   font-size: 18px;
@@ -103,31 +110,28 @@ h2 {
 }
 
 .preference,
-.insights{
-    margin-top: 85px;
+.insights {
+  margin-top: 85px;
 }
 
-.question{
-    margin-top: 50px;
+.question {
+  margin-top: 50px;
 }
 
-
-
-.covid-date{
-    width: 270px;
-    height: 45px;
-    border: 1px solid #000;
+.covid-date {
+  width: 270px;
+  height: 45px;
+  border: 1px solid #000;
 }
 
-.covid-date p{
-    display: flex;
-    align-items: center;
-    font-size: 18px;
+.covid-date p {
+  display: flex;
+  align-items: center;
+  font-size: 18px;
 }
 
-.text-area{
-    width: 390px;
-    height: 45px;
-    border: 1px solid #000;
+.text-area {
+  width: 390px;
+  height: 45px;
+  border: 1px solid #000;
 }
-
